Update to 0.0.5 and option to disable
- clusterBootstrapController.enabled added to the helm chart in case you
  need to deploy a newer version with newer deployment.yaml or something
- Upgrade to 0.0.5 which might not have any code changes but adds new
  securityContext stuff to avoid helm chart warning

--- a/charts/mccp/templates/cluster-bootstrap-controller/deployment.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/deployment.yaml
@@ -1,4 +1,4 @@
----
+{{- if .Values.clusterBootstrapController.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -57,7 +57,14 @@ spec:
             memory: 20Mi
         securityContext:
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          capabilities:
+            drop: [ "ALL" ]
+          seccompProfile:
+            type: RuntimeDefault
       securityContext:
         runAsNonRoot: true
       serviceAccountName: cluster-bootstrap-controller
       terminationGracePeriodSeconds: 10
+{{- end }}
