--- a/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
@@ -1,4 +1,4 @@
----
+{{- if .Values.clusterBootstrapController.enabled -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -166,3 +166,4 @@ subjects:
 - kind: ServiceAccount
   name: cluster-bootstrap-controller
   namespace: {{ .Release.Namespace | quote }}
+{{- end }}
