--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -208,7 +208,7 @@ jobs:
           make ui-build-for-tests
 
           cd test/integration/test
-          go test -v -ginkgo.v -run TestMccpUI -ginkgo.skip='@integration|@gce|@eks|@application|@upgrade' -ginkgo.reportFile=${{ env.ARTIFACTS_BASE_DIR }}/acceptance-test-results.xml --timeout=99999s
+          go test -v -ginkgo.v -run TestMccpUI -ginkgo.label-filter='!(integration, gce, eks, application, upgrade)'  -ginkgo.reportFile=${{ env.ARTIFACTS_BASE_DIR }}/acceptance-test-results.xml --timeout=99999s
       - name: Store integration test results
         if: ${{ always() }}
         uses: actions/upload-artifact@v2
@@ -230,7 +230,7 @@ jobs:
       runs-on: ubuntu-latest
       os-name: linux
       timeout-minutes: 60
-      focus-or-skip: "-ginkgo.focus='@smoke'"
+      label-filter: "-ginkgo.label-filter='smoke'"
       kubectl-version: "v1.21.1"
       login_user_type: "oidc"
       git-provider: github
@@ -258,7 +258,7 @@ jobs:
       runs-on: ubuntu-latest
       os-name: linux
       timeout-minutes: 60
-      focus-or-skip: "-ginkgo.focus='@smoke'"
+      label-filter: "-ginkgo.label-filter='smoke'"
       kubectl-version: "v1.22.0"
       login_user_type: "cluster-user"
       git-provider: gitlab
@@ -288,7 +288,7 @@ jobs:
       runs-on: ubuntu-latest
       os-name: linux
       timeout-minutes: 60
-      focus-or-skip: "-ginkgo.focus='@smoke'"
+      label-filter: "-ginkgo.label-filter='smoke'"
       kubectl-version: "v1.23.3"
       login_user_type: "oidc"
       git-provider: gitlab
@@ -324,7 +324,7 @@ jobs:
       runs-on: ubuntu-latest
       os-name: linux
       timeout-minutes: 90
-      focus-or-skip: "-ginkgo.skip='@upgrade|@smoke|@gce|@eks'"
+      label-filter: "-ginkgo.label-filter='!(upgrade, smoke, gce, eks)'"
       kubectl-version: "v1.23.3"
       login_user_type: "oidc"
       git-provider: github
