--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -24,7 +24,6 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
-    "@uiw/react-md-editor": "^3.12.1",
     "@weaveworks/weave-gitops": "0.7.0-patch1",
     "classnames": "^2.3.1",
     "d3-scale": "4.0.0",
@@ -40,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie-player": "^1.3.3",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.34.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "~5.0.0",
