fix!: Change entitlement ns to be `flux-system`

--- a/test/utils/data/entitlement-secret-invalid.yaml
+++ b/test/utils/data/entitlement-secret-invalid.yaml
@@ -5,5 +5,5 @@ kind: Secret
 metadata:
   creationTimestamp: null
   name: weave-gitops-enterprise-credentials
-  namespace: wego-system
+  namespace: flux-system
 type: Opaque
