--- a/charts/mccp/templates/clusters-service/clusters_service_secrets_rb.yaml
+++ b/charts/mccp/templates/clusters-service/clusters_service_secrets_rb.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
     name: clusters-service-secrets-role
-    namespace: wego-system
+    namespace: flux-system
 roleRef:
     apiGroup: rbac.authorization.k8s.io
     kind: ClusterRole
