--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -56,12 +56,12 @@ config:
     issuerURL: ""
     redirectURL: ""
     cookieDuration: 1h
-    # Name of secret in wego-system namespace that contains a clientId and clientSecret
+    # Name of secret in flux-system namespace that contains a clientId and clientSecret
     clientCredentialsSecret: ""
 
 agentTemplate:
   natsScheme: nats
-  natsURL: weave-gitops-enterprise-nats-client.wego-system:4222
+  natsURL: weave-gitops-enterprise-nats-client.flux-system:4222
 
 nats:
   auth:
