--- a/cmd/clusters-service/pkg/charts/testdata/parsing/profile.yaml
+++ b/cmd/clusters-service/pkg/charts/testdata/parsing/profile.yaml
@@ -3,7 +3,7 @@ kind: HelmRelease
 metadata:
   creationTimestamp: null
   name: dev-podinfo
-  namespace: wego-system
+  namespace: flux-system
 spec:
   chart:
     spec:
