--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -46,6 +46,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^8.0.2",
     "react-use": "^17.1.1",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
