--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/styled-components": "^5.1.9",
     "@weaveworks/weave-gitops": "0.7.0-patch1",
     "classnames": "^2.3.1",
@@ -39,11 +40,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lottie-player": "^1.3.3",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.34.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "~5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^8.0.2",
     "react-use": "^17.1.1",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
