--- a/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
@@ -1,4 +1,4 @@
----
+{{- if .Values.clusterBootstrapController.enabled -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -40,9 +40,16 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
   name: cluster-bootstrap-controller-manager-role
 rules:
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
 - apiGroups:
   - batch
   resources:
@@ -159,3 +166,4 @@ subjects:
 - kind: ServiceAccount
   name: cluster-bootstrap-controller
   namespace: {{ .Release.Namespace | quote }}
+{{- end }}
