--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -154,25 +154,9 @@ jobs:
       - name: Grab all tags from git
         run: |
           git fetch --tags -f
-      - uses: actions/setup-node@v2
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: "yarn"
-          cache-dependency-path: |
-            ui-cra/yarn.lock
-      - name: Yarn Cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ github.workspace }}/ui-cra/node_modules
-          # node_modules is not compat w/ multiple versions of node, invalidate if it changes
-          key: ${{ runner.os }}-${{ env.NODE_VERSION }}-${{ env.NODE_MODULES_CACHE_NAME }}-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.NODE_VERSION }}-${{ env.NODE_MODULES_CACHE_NAME }}-
       - name: build
-        env:
-          GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
         run: |
-          make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} ui-cra/.uptodate
+          make GITHUB_BUILD_TOKEN=${{ secrets.WGE_NPM_GITHUB_TOKEN }} ui-cra/.uptodate
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
