--- a/ui-cra/Makefile
+++ b/ui-cra/Makefile
@@ -1,6 +1,6 @@
 CALENDAR_VERSION=$(shell date +"%Y-%m")
 
-node_modules:
+node_modules: package.json yarn.lock
 	yarn config set network-timeout 300000 && yarn install --prod --frozen-lockfile
 
 build: node_modules $(shell find src -type f)
