Adds default role-bindings for the admin user
- Can be disabled if need be
- Improves the UX a lot, user doesn't have to fiddle with rolebindings
  during setup

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -84,6 +84,8 @@ clusterBootstrapController:
 rbac:
   userRoles:
     create: true
+  adminUserRoleBindings:
+    create: true
 
 service:
   type: ClusterIP
