--- a/charts/mccp/templates/rbac/admin_role_bindings.yaml
+++ b/charts/mccp/templates/rbac/admin_role_bindings.yaml
@@ -30,8 +30,22 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: wego-admin-read-secrets
+  name: wego-admin-read-cluster-secrets
   namespace: {{ .Values.config.capi.clusters.namespace }}
+subjects:
+- kind: User
+  name: "wego-admin"
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: gitops-secrets-reader
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: wego-admin-read-release-namespace-secrets
+  namespace: {{ .Release.Namespace | quote }}
 subjects:
 - kind: User
   name: "wego-admin"
@@ -65,5 +79,19 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: gitops-policies-reader
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: wego-admin-read-gitopsclusters
+  namespace: {{ .Values.config.capi.clusters.namespace }}
+subjects:
+- kind: User
+  name: "wego-admin"
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: ClusterRole
+  name: gitops-gitopsclusters-reader
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
