--- a/charts/mccp/templates/clusters-service/impersonator.yaml
+++ b/charts/mccp/templates/clusters-service/impersonator.yaml
@@ -4,7 +4,7 @@ metadata:
   name: impersonator
 rules:
   - apiGroups: [""]
-    resources: ["users", "groups", "serviceaccounts"]
+    resources: ["users", "groups"]
     verbs: ["impersonate"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
