--- a/charts/mccp/templates/clusters-service/impersonator.yaml
+++ b/charts/mccp/templates/clusters-service/impersonator.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: impersonator
+  name: clusters-service-impersonator-role
 rules:
   - apiGroups: [""]
     resources: ["users", "groups"]
@@ -14,7 +14,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: impersonator
+  name: clusters-service-impersonator-role
 subjects:
   - kind: ServiceAccount
     name: {{ include "mccp.serviceAccountName" . }}
