Upgrade the cluster-bootstrap-controller to GitopsCluster support
- 0.1.0 has GitopsCluster support
- Add GitopsCluster entry to all templates
- Add more RBAC so CBC can read GitopsClusters

--- a/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
@@ -98,6 +98,20 @@ rules:
   - patch
   - update
   - watch
+- apiGroups:
+  - gitops.weave.works
+  resources:
+  - gitopsclusters/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - gitops.weave.works
+  resources:
+  - gitopsclusters/status
+  verbs:
+  - get
+  - patch
+  - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
