--- a/test/utils/data/capi-server-v1-capitemplate.yaml
+++ b/test/utils/data/capi-server-v1-capitemplate.yaml
@@ -11,6 +11,16 @@ spec:
       options: []
       required: true
   resourcetemplates:
+    - apiVersion: gitops.weave.works/v1alpha1
+      kind: GitopsCluster
+      metadata:
+        name: "${CLUSTER_NAME}"
+        namespace: "${NAMESPACE}"
+        labels:
+          weave.works/capi: bootstrap
+      spec:
+        capiClusterRef:
+          name: "${CLUSTER_NAME}"
     - apiVersion: cluster.x-k8s.io/v1alpha3
       kind: Cluster
       metadata:
