--- a/test/utils/data/capi-server-v1-template-azure.yaml
+++ b/test/utils/data/capi-server-v1-template-azure.yaml
@@ -21,6 +21,16 @@ spec:
       description: VM node types
       options: ["Standard_D2s_v3", "Standard_D4_v4"]
   resourcetemplates:
+    - apiVersion: gitops.weave.works/v1alpha1
+      kind: GitopsCluster
+      metadata:
+        name: "${CLUSTER_NAME}"
+        namespace: "${NAMESPACE}"
+        labels:
+          weave.works/capi: bootstrap
+      spec:
+        capiClusterRef:
+          name: "${CLUSTER_NAME}"
     - apiVersion: cluster.x-k8s.io/v1alpha4
       kind: Cluster
       metadata:
