--- a/test/utils/data/capi-template-capd-observability.yaml
+++ b/test/utils/data/capi-template-capd-observability.yaml
@@ -22,6 +22,16 @@ spec:
     - name: WORKER_MACHINE_COUNT
       description: Number of control planes
   resourcetemplates:
+    - apiVersion: gitops.weave.works/v1alpha1
+      kind: GitopsCluster
+      metadata:
+        name: "${CLUSTER_NAME}"
+        namespace: "${NAMESPACE}"
+        labels:
+          weave.works/capi: bootstrap
+      spec:
+        capiClusterRef:
+          name: "${CLUSTER_NAME}"
     - apiVersion: cluster.x-k8s.io/v1beta1
       kind: Cluster
       metadata:
