Update some indexes when filling out Create cluster form

--- a/test/utils/data/capi-server-v1-template-eks-fargate.yaml
+++ b/test/utils/data/capi-server-v1-template-eks-fargate.yaml
@@ -15,7 +15,7 @@ spec:
       kind: GitopsCluster
       metadata:
         name: "${CLUSTER_NAME}"
-        namespace: "${NAMESPACE}"
+        namespace: default
         labels:
           weave.works/capi: bootstrap
       spec:
