--- a/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
+++ b/charts/mccp/templates/cluster-bootstrap-controller/rbac.yaml
@@ -112,6 +112,16 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - gitops.weave.works
+  resources:
+  - gitopsclusters
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
