--- a/charts/mccp/templates/rbac/admin_role_bindings.yaml
+++ b/charts/mccp/templates/rbac/admin_role_bindings.yaml
@@ -95,3 +95,17 @@ roleRef:
   name: gitops-gitopsclusters-reader
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: wego-admin-gitops-capi-cluster-reader
+  namespace: {{ .Values.config.capi.clusters.namespace }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: gitops-capicluster-reader
+subjects:
+  - kind: User
+    name: wego-admin
+    apiGroup: rbac.authorization.k8s.io
