--- a/charts/mccp/templates/rbac/user_roles.yaml
+++ b/charts/mccp/templates/rbac/user_roles.yaml
@@ -40,6 +40,9 @@ rules:
   - apiGroups: ["capi.weave.works"]
     resources: ["capitemplates"]
     verbs: ["get", "watch", "list"]
+  - apiGroups: ["tfcontroller.weave.works"]
+    resources: ["tftemplates"]
+    verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
