Always gotta pull images

--- a/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
         - image: ghcr.io/fluxcd/flux-cli:v0.29.5
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           name: flux-bootstrap
           resources: {}
           volumeMounts:
