--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -42,6 +42,7 @@ config:
     templates:
       namespace: default
       injectPruneAnnotation: enabled
+      addBasesKustomization: enabled
     clusters:
       namespace: default
     repositoryURL: ""
@@ -106,4 +107,4 @@ service:
   healthCheckNodePort: 0
 
 cluster-controller:
-  enabled: false
+  enabled: true
