clean policy-agent resources as part of cluster reset/cleanup

--- a/test/utils/data/postgres-manifests.yaml
+++ b/test/utils/data/postgres-manifests.yaml
@@ -24,6 +24,7 @@ spec:
     spec:
       containers:
         - image: "postgres:9.6.2"
+          imagePullPolicy: Always
           name: postgres
           env:
             - name: POSTGRES_USER
