--- a/tools/dev-resources.yaml
+++ b/tools/dev-resources.yaml
@@ -23,6 +23,7 @@ spec:
         namespace: flux-system
       version: 0.2.x
   targetNamespace: policy-system
+  releaseName: weave-policy-agent
   interval: 1m
   values:
     accountId: "weaveworks"
