--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -94,10 +94,11 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.3.0",
+    "@vitejs/plugin-react": "^1.3.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
     "prettier": "^2.3.0",
-    "vite": "^2.9.2"
+    "vite": "^2.9.9",
+    "vite-plugin-static-copy": "^0.5.0"
   }
 }
