--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -35,6 +35,7 @@
     "json-schema": "0.4.0",
     "lodash": "^4.17.21",
     "moment": "2.25.3",
+    "parcel": "^2.5.0",
     "polished": "3.6.3",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -94,7 +95,9 @@
     ]
   },
   "devDependencies": {
+    "@parcel/transformer-typescript-tsc": "^2.5.0",
     "@vitejs/plugin-react": "^1.3.2",
+    "buffer": "^6.0.3",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
     "prettier": "^2.3.0",
