Renamed the template to GitOpsTemplate

--- a/cmd/clusters-service/Makefile
+++ b/cmd/clusters-service/Makefile
@@ -19,11 +19,11 @@ build:
 CRD_OPTIONS ?= "crd:trivialVersions=true,preserveUnknownFields=false"
 
 crd-manifests: controller-gen ## Generate WebhookConfiguration, ClusterRole and CustomResourceDefinition objects.
-	$(CONTROLLER_GEN) $(CRD_OPTIONS) rbac:roleName=manager-role webhook paths="./api/capi/... ./api/tfcontroller/..." output:crd:artifacts:config=config/crd/bases
+	$(CONTROLLER_GEN) $(CRD_OPTIONS) rbac:roleName=manager-role webhook paths="./..." output:crd:artifacts:config=config/crd/bases
 	cp config/crd/bases/* ../../charts/mccp/crds/
 
 crd-generate: controller-gen ## Generate code containing DeepCopy, DeepCopyInto, and DeepCopyObject method implementations.
-	$(CONTROLLER_GEN) object:headerFile="hack/boilerplate.go.txt" paths="./api/capi/... ./api/tfcontroller/..."
+	$(CONTROLLER_GEN) object:headerFile="hack/boilerplate.go.txt" paths="./..."
 
 # To regenerate the CRD after changes to api/v1/capitemplate_types.go, run make crd-generate
 # Note that controller-gen needs to be in $PATH
