Revert "no tag.."
This reverts commit 95d4abeab17f92e51ecdfe72f72e2145974c8be9.

--- a/charts/cluster-controller/values.yaml
+++ b/charts/cluster-controller/values.yaml
@@ -13,7 +13,7 @@ controllerManager:
   manager:
     image:
       repository: docker.io/weaveworks/cluster-controller
-      tag: 4ca70be
+      tag: v1.1.0
     resources:
       limits:
         cpu: 500m
@@ -36,8 +36,8 @@ managerConfig:
       port: 9443
 metricsService:
   ports:
-    - name: https
-      port: 8443
-      protocol: TCP
-      targetPort: https
+  - name: https
+    port: 8443
+    protocol: TCP
+    targetPort: https
   type: ClusterIP
