--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -94,6 +94,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^13.5.2",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.0",
     "prettier": "^2.3.0"
