--- a/cmd/clusters-service/pkg/templates/testdata/tf-controller-2.yaml
+++ b/cmd/clusters-service/pkg/templates/testdata/tf-controller-2.yaml
@@ -1,5 +1,5 @@
 apiVersion: tfcontroller.weave.works/v1alpha1
-kind: TFTemplate
+kind: GitOpsTemplate
 metadata:
   name: tf-controller-2
   namespace: default
