--- a/cmd/clusters-service/pkg/templates/testdata/tf-controller-multiple.yaml
+++ b/cmd/clusters-service/pkg/templates/testdata/tf-controller-multiple.yaml
@@ -1,5 +1,5 @@
 apiVersion: tfcontroller.weave.works/v1alpha1
-kind: TFTemplate
+kind: GitOpsTemplate
 metadata:
   name: sample-wge-tf-controller-template
   namespace: default
