Add capa/capg capi providers

--- a/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
@@ -9,6 +9,7 @@ spec:
       weave.works/capi: bootstrap
   jobTemplate:
     generateName: "run-gitops-{{ .ObjectMeta.Name }}"
+    # requiredClusterReady: true
     spec:
       containers:
         - image: ghcr.io/fluxcd/flux-cli:v0.29.5
