--- a/ui-cra/Makefile
+++ b/ui-cra/Makefile
@@ -1,7 +1,7 @@
 CALENDAR_VERSION=$(shell date +"%Y-%m")
 
 node_modules: package.json yarn.lock
-	yarn config set network-timeout 300000 && yarn install --prod --frozen-lockfile
+	yarn config set network-timeout 300000 && yarn install --frozen-lockfile
 
 build: node_modules $(shell find src -type f)
 	REACT_APP_VERSION="$(CALENDAR_VERSION) $(VERSION)" yarn build
