--- a/tools/kind-cluster-with-extramounts.yaml
+++ b/tools/kind-cluster-with-extramounts.yaml
@@ -5,3 +5,13 @@ nodes:
   extraMounts:
   - hostPath: /var/run/docker.sock
     containerPath: /var/run/docker.sock
+  extraPortMappings:
+  - containerPort: 30000
+    hostPort: 80
+    listenAddress: "0.0.0.0"
+    protocol: tcp
+  - containerPort: 30001
+    hostPort: 443
+    listenAddress: "0.0.0.0"
+    protocol: tcp
+- role: worker
