--- a/ui-cra/Makefile
+++ b/ui-cra/Makefile
@@ -4,4 +4,4 @@ node_modules: package.json yarn.lock
 	yarn config set network-timeout 300000 && yarn install --frozen-lockfile
 
 build: node_modules $(shell find src -type f)
-	REACT_APP_VERSION="$(CALENDAR_VERSION) $(VERSION)" yarn build
+	VITE_APP_VERSION="$(CALENDAR_VERSION) $(VERSION)" yarn build
