Do yarn start instead of yarn dev
Co-authored-by: Simon <footless@gmail.com>

--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -61,7 +61,7 @@
     "mini-css-extract-plugin": "~2.4.5"
   },
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
