fix: remove "-u" flag from go install
Sorry, made the change in the file, but did add to the staged changes
list before commit.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,7 +41,7 @@ jobs:
       run: |
         go mod download
         go install github.com/wadey/gocovmerge@latest
-        go install -u github.com/jstemmer/go-junit-report@latest
+        go install github.com/jstemmer/go-junit-report@latest
         npm install -g junit-report-merger
     - name: Install goveralls
       env:
