--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -30,7 +30,6 @@
     "d3-scale": "4.0.0",
     "d3-time": "^3.0.0",
     "git-url-parse": "11.1.2",
-    "http-proxy-middleware": "^2.0.0",
     "js-file-download": "^0.4.12",
     "json-schema": "0.4.0",
     "lodash": "^4.17.21",
@@ -43,15 +42,13 @@
     "react-markdown": "^8.0.3",
     "react-query": "^3.34.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "~5.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^8.0.2",
     "react-use": "^17.1.1",
     "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
-    "vite-plugin-svgr": "^1.1.0",
-    "web-vitals": "^1.0.1"
+    "vite-plugin-svgr": "^1.1.0"
   },
   "resolutions": {
     "**/react": "^17.0.2",
@@ -95,8 +92,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.3.2",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.0",
     "prettier": "^2.3.0",
     "vite": "^2.9.9",
     "vite-plugin-static-copy": "^0.5.0"
