--- a/cmd/clusters-service/Makefile
+++ b/cmd/clusters-service/Makefile
@@ -13,7 +13,7 @@ install:
 
 .PHONY: build
 build:
-	go build -o clusters-service main.go
+	go build -o bin/clusters-service main.go
 
 # Produce CRDs that work back to Kubernetes 1.11 (no version conversion)
 CRD_OPTIONS ?= "crd:trivialVersions=true,preserveUnknownFields=false"
