--- a/cmd/clusters-service/config/samples/gitops-template-terraform.yaml
+++ b/cmd/clusters-service/config/samples/gitops-template-terraform.yaml
@@ -1,5 +1,5 @@
 apiVersion: clustertemplates.weave.works/v1alpha1
-kind: GitOpsTemplate
+kind: GitopsTemplate
 metadata:
   name: sample-wge-tf-controller-template
   namespace: default
