--- a/cmd/clusters-service/pkg/templates/testdata/cluster-template-2.yaml
+++ b/cmd/clusters-service/pkg/templates/testdata/cluster-template-2.yaml
@@ -1,5 +1,5 @@
 apiVersion: clustertemplates.weave.works/v1alpha1
-kind: GitOpsTemplate
+kind: GitopsTemplate
 metadata:
   name: tf-controller-2
   namespace: default
