--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -345,7 +345,7 @@ jobs:
       WGE_GITHUB_MFA_KEY: ${{ secrets.WGE_GITHUB_MFA_KEY }}
 
   acceptance-tests-gitlab-on-prem:
-    needs: [build, coverage, gitops-binary]
+    needs: [build, gitops-binary]
     uses: ./.github/workflows/acceptance-test.yaml
     with:
       runs-on: ubuntu-latest
