--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -77,7 +77,7 @@ jobs:
       ref: main
 
   acceptance-tests-gitlab-on-prem:
-    needs: [build, gitops-binary]
+    needs: [build, coverage, gitops-binary]
     uses: ./.github/workflows/acceptance-test.yaml
     with:
       runs-on: ubuntu-latest
