--- a/test/utils/data/capi-template-capd-observability.yaml
+++ b/test/utils/data/capi-template-capd-observability.yaml
@@ -28,7 +28,7 @@ spec:
         name: "${CLUSTER_NAME}"
         namespace: "${NAMESPACE}"
         labels:
-          weave.works/capi: bootstrap
+          weave.works/flux: bootstrap
       spec:
         capiClusterRef:
           name: "${CLUSTER_NAME}"
