--- a/test/utils/data/capi-template-capd.yaml
+++ b/test/utils/data/capi-template-capd.yaml
@@ -26,7 +26,7 @@ spec:
         name: "${CLUSTER_NAME}"
         namespace: "${NAMESPACE}"
         labels:
-          weave.works/capi: bootstrap
+          weave.works/flux: bootstrap
       spec:
         capiClusterRef:
           name: "${CLUSTER_NAME}"
