--- a/charts/mccp/templates/rbac/admin_role_bindings.yaml
+++ b/charts/mccp/templates/rbac/admin_role_bindings.yaml
@@ -1,9 +1,8 @@
 {{- if .Values.rbac.adminUserRoleBindings.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: wego-admin-read-apps
-  namespace: flux-system
 subjects:
 - kind: User
   name: "wego-admin"
