--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -323,7 +323,7 @@ jobs:
       runs-on: ubuntu-latest
       os-name: linux
       timeout-minutes: 90
-      label-filter: "-ginkgo.label-filter='!(upgrade, smoke, gce, eks)'"
+      label-filter: "-ginkgo.label-filter='!(upgrade, application, smoke, gce, eks)'"
       kubectl-version: "v1.23.3"
       login_user_type: "oidc"
       git-provider: github
