--- a/cmd/clusters-service/pkg/templates/testdata/text-template.yaml
+++ b/cmd/clusters-service/pkg/templates/testdata/text-template.yaml
@@ -4,6 +4,7 @@ metadata:
   name: cluster-template-1
 spec:
   description: this is test template 1
+  renderType: templating
   params:
     - name: CLUSTER_NAME
       description: This is used for the cluster naming.
@@ -13,7 +14,7 @@ spec:
   - apiVersion: cluster.x-k8s.io/v1alpha3
     kind: Cluster
     metadata:
-      name: "${CLUSTER_NAME}"
+      name: "{{ .params.CLUSTER_NAME }}"
     spec:
       clusterNetwork:
         pods:
@@ -21,8 +22,8 @@ spec:
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1alpha3
         kind: AWSCluster
-        name: "${CLUSTER_NAME}"
+        name: "{{ .params.CLUSTER_NAME }}"
       controlPlaneRef:
         kind: KubeadmControlPlane
         apiVersion: controlplane.cluster.x-k8s.io/v1alpha3
-        name: "${CLUSTER_NAME}-control-plane"
+        name: "{{ .params.CLUSTER_NAME }}-control-plane"
