--- a/charts/mccp/templates/clusters-service/configmap.yaml
+++ b/charts/mccp/templates/clusters-service/configmap.yaml
@@ -29,3 +29,6 @@ data:
   TLS_CERT_FILE: /etc/clusters-service-tls/tls.crt
   TLS_PRIVATE_KEY: /etc/clusters-service-tls/tls.key
   {{- end }}
+  {{- if .Values.features.progressiveDelivery.enabled }}
+  ENABLE_PROGRESSIVE_DELIVERY: "1"
+  {{- end }}
