--- a/charts/mccp/templates/rbac/user_roles.yaml
+++ b/charts/mccp/templates/rbac/user_roles.yaml
@@ -82,6 +82,18 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  name: gitops-canaries-reader
+rules:
+  - apiGroups: ["flagger.app"]
+    resources: ["canaries"]
+    verbs: ["get", "list"]
+  - apiGroups: [""]
+    resources: ["events"]
+    verbs: ["get", "watch", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
   name: gitops-gitopsclusters-reader
 rules:
 - apiGroups: ["gitops.weave.works"]
